deploymentstrategies/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flaskapp-container
          image: theninjatuna/warpnet-sre-challenge:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          volumeMounts:
            - name: sqlite-storage
              mountPath: /data

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-flaskapp-pvc
